tests/samples/negative/generics/generic_sizeof_missing_sized.ax
module generic_sizeof_missing_sized;

fn bad<T>(value: T) -> usize {
    if ptraddr(&value) == 0usize {
        return 0usize;
    }
    return sizeof<T>();
}

fn main() -> i32 {
    return ((bad<i32>(1)) as i32);
}
